--- a/apps/wond/package.json
+++ b/apps/wond/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview",
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@wond/core": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@types/node": "^22.14.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
@@ -24,9 +26,11 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globals": "^16.0.0",
     "rimraf": "^5.0.5",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.29.0",
     "vite": "^5.0.8"
   }
 }
