--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,8 +11,8 @@
     "noEmit": false,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "declaration": true,
     "outDir": "dist",
