--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,12 +14,13 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "@wond/common": "workspace:*"
+    "@wond/common": "workspace:*",
+    "canvaskit-wasm": "^0.40.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
+    "@types/node": "^22.14.0",
     "rimraf": "^5.0.5",
-    "@types/node": "^22.14.0"
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
