--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "pnpm -r build",
+    "build": "turbo run build",
     "dev": "run-p dev:common dev:core dev:wond",
     "dev:common": "pnpm --filter @wond/common dev",
     "dev:core": "pnpm --filter @wond/core dev",
@@ -17,16 +17,18 @@
     "node": ">=16",
     "pnpm": ">=8"
   },
+  "packageManager": "pnpm@8.15.4",
   "devDependencies": {
-    "@jgoz/esbuild-plugin-typecheck": "^4.0.3",
-    "@types/minimist": "^1.2.5",
-    "esbuild": "^0.25.2",
-    "esbuild-sass-plugin": "^3.3.1",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.6",
-    "minimist": "^1.2.8",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/node": "^22.14.0",
     "npm-run-all": "^4.1.5",
-    "picocolors": "^1.1.1",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.44.1",
+    "tslib": "^2.8.1",
+    "turbo": "^2.5.4",
+    "typescript": "^5.2.2"
   }
 }
