--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^3.5.3",
     "rimraf": "^5.0.5",
     "rollup": "^4.44.1",
+    "rollup-plugin-dts": "^6.2.1",
     "tslib": "^2.8.1",
     "turbo": "^2.5.4",
     "typescript": "^5.2.2"
