--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "rollup -c --configPlugin typescript",
     "dev": "rollup -c --configPlugin typescript -w",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "clean-deps": "rm -rf node_modules"
   },
   "dependencies": {
     "uuid": "^11.1.0"
