--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,11 @@
-[root = root]
+[*]
+indent_size = 2
+indent_style = space
+
+[*.ts]
+indent_size = 2
+indent_style = space
+
+[*.tsx]
 indent_size = 2
 indent_style = space
