--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@wond/common": "workspace:*",
-    "canvaskit-wasm": "^0.40.0"
+    "canvaskit-wasm": "^0.40.0",
+    "transformation-matrix": "^3.0.0"
   },
   "devDependencies": {
     "rollup-plugin-copy": "^3.5.0"
