--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -14,7 +14,10 @@
     "clean-deps": "rm -rf node_modules"
   },
   "dependencies": {
+    "lodash.throttle": "^4.1.1",
     "uuid": "^11.1.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/lodash.throttle": "^4.1.9"
+  }
 }
