--- a/apps/wond/package.json
+++ b/apps/wond/package.json
@@ -32,6 +32,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
-    "vite-plugin-static-copy": "^3.1.0"
+    "vite-plugin-static-copy": "^3.1.0",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
