--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -14,10 +14,12 @@
     "clean-deps": "rm -rf node_modules"
   },
   "dependencies": {
+    "lodash.isequal": "^4.5.0",
     "lodash.throttle": "^4.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/lodash.isequal": "^4.5.8",
     "@types/lodash.throttle": "^4.1.9"
   }
 }
