--- a/turbo.json
+++ b/turbo.json
@@ -1,13 +1,8 @@
 {
-    "tasks": {
-        "build": {
-            "dependsOn": [
-                "^build"
-            ],
-            "outputs": [
-                "dist/**",
-                "dist/**/*.map"
-            ]
-        }
+  "tasks": {
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", "dist/**/*.map"]
     }
+  }
 }
