实现锁定宽高比例resize实现（单图形，多图形）

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "lodash.isequal": "^4.5.0",
+    "lodash.isequalwith": "^4.4.0",
     "lodash.throttle": "^4.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/lodash.isequal": "^4.5.8",
+    "@types/lodash.isequalwith": "^4.4.9",
     "@types/lodash.throttle": "^4.1.9"
   }
 }
